# MKImageLib

./: .gitignore  CMakeLists.txt  MKImageLib.sln
MKImageLib/: CMakeLists.txt  MKImageLib.vcxproj  MKImageLib.vcxproj.filters
MKImageLib/src/: MKIHistogram.cpp  MKIImage.cpp  MKIImage.h  MKIImageFuncs.cpp  MKIMask.h
Run/: CMakeLists.txt  Run.vcxproj  Run.vcxproj.filters
Run/img/: peppers512_PGM.pgm
Run/img/notout/: hist.csv  lena256_PGM_log.pgm  lena512_PGM_histeq.pgm  lena512_PGM_log.pgm  shuttle_pgm_mask.pgm
Run/src/: Main.cpp
Run/src/Assignment 4/: MKIFileType.cpp  MKIFileType.h  MKIHistogram.cpp  MKIHistogram.h  MKIImage.cpp  MKIImage.h  MKIImageConstants.h  MKIImageFuncs.h  MKIMask.cpp  Main.cpp
img/notout/: .XnViewSort  hist512.csv  lena256_PGM_linear.pgm  lena512_PGM_COPY.pgm  lena512_PGM_mask.pgm  lprewit1.pgm  peppers512_PGM_maskCOPY.pgm  shuttle_pgm240_COPY.pgm
